# googlea2a-demo

./: .env.example  .gitignore  README.md  blog.md  intro.md  pyproject.toml  requirements.txt
currency_agent/: __main__.py  agent.py  executor.py  server.py  test_client.py
reporting_agent/: __main__.py  agent.py  executor.py  interactive_test.py  server.py  test_client.py
test/: integration_test_client.py  interactive_integration_test.py  simple_integration_test.py
