[project]
name = "a2a-currency-reporting"
version = "0.1.0"
description = "A modular agent-to-agent (A2A) architecture for intelligent automation using the A2A protocol"
authors = [
    {name = "Bhanu Singh", email = "bhanu.pratap@outlook.com"}
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "fastapi",
    "uvicorn",
    "httpx",
    "pydantic",
    "python-dotenv",
    "google-generativeai",
    "langgraph",
    "langchain-google-genai",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["currency_agent", "reporting_agent"]

[tool.uv]
dev-dependencies = [] 